added menu items for bottom navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">IG Layout</string>
+    <string name="nav_home">Home</string>
+    <string name="nav_explore">Explore</string>
+    <string name="nav_gallery">Gallery</string>
+    <string name="nav_notifications">Notifications</string>
+    <string name="nav_me">Me</string>
 </resources>
